delete bing wallpaper auto renew

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/img/logo.png" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/img/logo.jpg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -115,6 +115,5 @@
     </header>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/js/main.js"></script>
-    <script type="text/javascript" src="./assets/json/images.json?cb=getBingImages"></script>
 </body>
 </html>
