add background-image api

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/apple-touch-icon.png">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/favicon.ico">
+    <style>
+      body {
+       background: url('https://api.ghser.com/random/api.php');
+       background-size: cover;
+       background-repeat: no-repeat;
+      }
+    </style>
 </head>
 
 <body>
