--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/apple-touch-icon.png">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/favicon.ico">
-    <style>
-      body {
-       background: url('https://api.ghser.com/random/api.php');
-       background-size: cover;
-       background-repeat: no-repeat;
-      }
-    </style>
+    <div id="banner" class="banner" style="background:url(https://api.ghser.com/random/api.php) no-repeat center center;background-size:cover">
 </head>
 
 <body>
