--- a/index.html
+++ b/index.html
@@ -51,6 +51,28 @@
                     </h1>
                     <p class="panel-cover__subtitle panel-subtitle iUp">Think diffrent</p>
                     <hr class="panel-cover__divider iUp" />
+                    <p>
+                     <li class="navigation__item">
+                         <a href="https://github.com/Morax-xyc/" title="github" target="_blank">
+                              <i class='social iconfont icon-github'></i>
+                                            <span class="label">Github</span>
+                                        </a>
+                                    </li>
+                                   <!-- <li class="navigation__item">
+                                        <a href="https://www.cnblogs.com/dmego/" title="cnblogs" target="_blank">
+                                            <i class='social iconfont icon-cnblogs'></i>
+                                            <span class="label">cnblogs</span>
+                                        </a>
+                                    </li> -->
+
+                                   
+                     <li class="navigation__item">
+                         <a href="mailto:xyc@jbhdf.xyz title="email">
+                              <i class='social iconfont icon-email'></i>
+                                            <span class="label">Email</span>
+                                        </a>
+                                    </li>
+                    </p> 
                     <p id="description" class="panel-cover__description iUp">恰同学少年，风华正茂!
                         <br/>
                         <strong>-「允执厥中」</strong>
