Replace cdn.jsdelivr.net

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="keywords" content="Morax-xyc,Homepage">
     <meta name="author" content="Morax-xyc">
     <title>Morax-xyc's Homepage</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/css/onlinewebfonts.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/css/vno.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/apple-touch-icon.png">
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="https://morax-xyc.com/assets/css/onlinewebfonts.css"/>
+    <link rel="stylesheet" type="text/css" href="https://morax-xyc.com/assets/css/vno.css">
+    <link rel="stylesheet" type="text/css" href="https://morax-xyc.com/assets/css/iconfont.css">
+    <link rel="apple-touch-icon" href="https://morax-xyc.com/apple-touch-icon.png">
+    <link rel="icon" href="https://morax-xyc.com/favicon.ico">
     <div id="banner" class="banner" style="background:url(https://api.ghser.com/random/api.php) no-repeat center center;background-size:cover">
 </head>
 
@@ -29,7 +29,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/img/logo.jpg" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://morax-xyc.com/assets/img/logo.jpg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -136,7 +136,7 @@
             </p>
         </div>
     </header>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Morax-xyc/homepage/assets/js/main.js"></script>
+    <script type="text/javascript" src="https://morax-xyc.com/assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://morax-xyc.com/assets/js/main.js"></script>
 </body>
 </html>
